<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C)2011 Ezio Querini <iiizio AT users.sf.net>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
  <CheckBoxPreference
    android:key="add_markers"
    android:title="@string/mark_title"
    android:summary="@string/mark_summary"
	android:defaultValue="true" />
  <ListPreference
    android:key="page_per_file"
    android:title="@string/page_title"
    android:summary="@string/page_summary"
    android:entries="@array/pageArray"
	android:entryValues="@array/pageValues"
	android:defaultValue="10" />
    <PreferenceCategory android:title="@string/experimental">
      <CheckBoxPreference
        android:key="include_images"
        android:title="@string/images_title"
        android:summary="@string/images_summary"
		android:defaultValue="false" />
      <CheckBoxPreference
        android:key="show_images"
        android:title="@string/show_images_title"
        android:summary="@string/show_images_summary"
		android:defaultValue="false" />
  </PreferenceCategory>
</PreferenceScreen>